History for xm.theme
====================

1.0 (unreleased)
----------------

- Fixed issue 135, Titles of portlets are now not transformed to capitalized.
  [jladage]

- Fixed issue 126, When adding a project the header was not displayed.
  [jladage]


1.0beta2 (2009-01-15)
---------------------

- Style and portlet cleanup by laurens and jladage. [laurens, jladage]


1.0beta1 (2009-01-09)
---------------------

- Overrode the login portlet template, added a footer to the Login portlet. [simon]


0.9 (2009-01-07)
----------------

- Also show Documents as attachments. [mark]

- Remove the viewlets which showed the iterations grouped by
  state since there is a porlet to do this. [mark]

- The username is not rendered on each page but on DOM load. This allows for
  caching based on roles instead of each user.[jladage]

- Images are moved to a skins folder, so they get cached properly using the
  HTTPCache. [jladage]

- The username in the personal_bar now links to the author page instead of the
  dashboard. [jladage]

- Added 'Iterations:' in front of the open/current/closed iterations list and
  show it only if we have iterations in the project.  [fredvd]

- Moved the employees_overview page to Products.eXtremeManagement.
  [maurits]

- Made the employees overview page much much faster.  The billable
  percentages are not quite the same as from the bookings per month
  pages they point to, but that is for another day.  [maurits]

- Protecting the big employees overview page with the Manage Portal
  permission now.  [maurits]


0.8 (2008-09-16)
----------------

- Added locales/en to work around i18n bug: with e.g. Dutch and
  English as allowed languages, Dutch as site default, English as
  browser language (the only one or not), you would get Dutch for all
  translations in the xm.theme domain, even though the rest of the UI
  is in English... [maurits]

- Fixed the livesearch.js customization to work with Plone 3.1.x We have to drop