@@ -1,6 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:zope="http://namespaces.zope.org/zope"
     xmlns:plone="http://namespaces.plone.org/plone"
     i18n_domain="xm.theme">
 
@@ -112,6 +113,22 @@
       class="plone.app.portlets.browser.manage.ManageDashboardPortlets"
       template="templates/manage-dashboard.pt"
       layer=".interfaces.IThemeSpecific"
+      />
+
+  <!-- My projects list on DOM load -->
+  <zope:adapter
+      name="xm.my_project_list"
+      provides="zope.contentprovider.interfaces.IContentProvider"
+      factory=".project_list.MyProjectList"
+      />
+
+  <browser:page
+      for="*"
+      name="xm_insert_projects_list"
+      attribute="xm_insert_projects_list"
+      layer=".interfaces.IThemeSpecific"
+      class=".project_list.KSSProjectsList"
+      permission="zope2.View"
       />
 
     <!-- Override the login portlet template, to give it a footer -->
