@@ -1,3 +1,7 @@
 .userName:load {
     action-server: xm_fullname;
 }
+
+#my-projects:load {
+    action-server: xm_insert_projects_list;
+}
