@@ -1,0 +1,36 @@
+<tal:block>
+  <tal:single condition="view/has_single_project">
+    <a href=""
+       tal:define="project python:view.my_projects()[0]"
+       tal:attributes="href project/url;
+                       title project/description"
+       i18n:domain="xm.theme"
+       i18n:translate="label_my_project">
+      My Project
+    </a>
+  </tal:single>
+  <tal:multiple condition="view/has_projects">
+    <dl id="my-projects-menu" class="actionMenu deactivated">
+      <dt class="actionMenuHeader label-my-projects">
+        <a href="#">
+          <span i18n:domain="xm.theme"
+                i18n:translate="label_my_projects">My Projects</span>
+          <span class="arrowDownAlternative">&#9660;</span>
+        </a>
+      </dt>
+      <dd class="actionMenuContent project-submenu">
+        <ul>
+          <tal:actions repeat="project view/my_projects">
+            <li>
+              <a href=""
+                 tal:attributes="href project/url;
+                                 title project/description"
+                 tal:content="project/title">
+              </a>
+            </li>
+          </tal:actions>
+        </ul>
+      </dd>
+    </dl>
+  </tal:multiple>
+</tal:block>
